--- a/css/estilos.css
+++ b/css/estilos.css
@@ -14,3 +14,10 @@ h1 {
     margin: 10px auto;
     text-align: center;
 }
+p {
+    text-align: justify;
+    line-height: 20px;
+    margin bottom:  10px ;
+    margin-top: 10px;
+    
+}
